--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.73.6",
     "react-native-device-info": "^10.13.1",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.30.1",
     "react-native-svg": "12.1.1",
