--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.3.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
@@ -24,6 +25,7 @@
     "react-native-device-info": "^10.13.1",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.30.1",
     "react-native-svg": "12.1.1",
