--- a/ios/Grocery_Store/Info.plist
+++ b/ios/Grocery_Store/Info.plist
@@ -26,14 +26,13 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-<!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,5 +47,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Inter_Black.ttf</string>
+		<string>Inter_Bold.ttf</string>
+		<string>Inter_ExtraBold.ttf</string>
+		<string>Inter_ExtraLight.ttf</string>
+		<string>Inter_Light.ttf</string>
+		<string>Inter_Medium.ttf</string>
+		<string>Inter_Regular.ttf</string>
+		<string>Inter_SemiBold.ttf</string>
+		<string>Inter_Thin.ttf</string>
+	</array>
+</dict>
 </plist>
