--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,9 +106,13 @@ android {
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
-    implementation('com.facebook.react:react-android')
     implementation('com.facebook.react:flipper-integration')
-    implementation('com.facebook.fresco:animated-gif:2.5.0')
+    implementation('com.facebook.react:react-android')
+
+    implementation('com.facebook.fresco:animated-gif:3.1.3')
+
+    implementation('com.facebook.fresco:animated-webp:3.1.3')
+    implementation('com.facebook.fresco:webpsupport:3.1.3')
 
     if (hermesEnabled.toBoolean()) {
         implementation('com.facebook.react:hermes-android')
