--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Grocery_Store",
+  "name": "KaseraG",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-device-info": "^10.13.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
