--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-device-info": "^10.13.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.16.0",
