bugfix: "updated the splash screen"

--- a/android/link-assets-manifest.json
+++ b/android/link-assets-manifest.json
@@ -36,6 +36,14 @@
     {
       "path": "src/assets/fonts/Inter_Thin.ttf",
       "sha1": "757805e615c974756646e54ceff8e409d5c47207"
+    },
+    {
+      "path": "src/assets/fonts/Montserrat-Black.ttf",
+      "sha1": "ad9c434705a52d90ac5a770e591c2325fb48c2dc"
+    },
+    {
+      "path": "src/assets/fonts/Montserrat-ExtraBold.ttf",
+      "sha1": "1e3298f51b4766e2810a4a2c09a2c75c323d5e7e"
     }
   ]
 }
