--- a/ios/Grocery_Store/Info.plist
+++ b/ios/Grocery_Store/Info.plist
@@ -58,6 +58,8 @@
 		<string>Inter_Regular.ttf</string>
 		<string>Inter_SemiBold.ttf</string>
 		<string>Inter_Thin.ttf</string>
+		<string>Montserrat-Black.ttf</string>
+		<string>Montserrat-ExtraBold.ttf</string>
 	</array>
 </dict>
 </plist>
