--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-device-info": "^10.13.1",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
