--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
-REACT_APP_LOGIN_URL=http://35.154.133.112:8801/login/v1
+REACT_APP_Environment=local
+REACT_APP_LOGIN_URL=http://35.154.133.112:8801/v1
 REACT_APP_PRODUCT_URL=http://35.154.133.112:8802/v1
