--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -40,3 +40,10 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 
+
+
+
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=test1234
+MYAPP_UPLOAD_KEY_PASSWORD=test1234
